Bug 130212 - quanta crask after i select a array (in the wysiwyg interface)
Summary: quanta crask after i select a array (in the wysiwyg interface)
Status: RESOLVED FIXED
Alias: None
Product: quanta
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR crash
Target Milestone: ---
Assignee: András Manţia
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2006-07-03 20:45 UTC by Marc Collin
Modified: 2006-09-02 11:32 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Marc Collin 2006-07-03 20:45:10 UTC
Version:           3.5.3 (using KDE 3.5.3 Level "a" , unofficial build of SUSE )
Compiler:          Target: x86_64-suse-linux
OS:                Linux (x86_64) release 2.6.16.13-4-default

often, when i see the html code in the wysiwyg interface and i select a html array from the wysiwyg inerface, quanta crask

i get this information:

Using host libthread_db library "/lib64/libthread_db.so.1".
[Thread debugging using libthread_db enabled]
[New Thread 47844305425520 (LWP 21195)]
[KCrash handler]
#5  0x000000000052c879 in Node::getClosingNode ()
#6  0x000000000068e279 in kafkaCommon::getLastChild ()
#7  0x00000000006b1594 in kafkaCommon::duplicateNodeSubtree ()
#8  0x00000000006c5dc9 in kafkaCommon::getNodeSubtree ()
#9  0x00000000006c6476 in KafkaDocument::slotCopy ()
#10 0x00000000006c6689 in KafkaDocument::slotCopy ()
#11 0x0000000000462f3e in QuantaApp::slotCopy ()
#12 0x00000000004b5266 in QuantaApp::qt_invoke ()
#13 0x00002b839bbcea8c in QObject::activate_signal ()
   from /usr/lib/qt3/lib64/libqt-mt.so.3
#14 0x00002b839bbcf7a3 in QObject::activate_signal ()
   from /usr/lib/qt3/lib64/libqt-mt.so.3
#15 0x00002b839b05d2c1 in KAction::qt_invoke ()
   from /opt/kde3/lib64/libkdeui.so.4
#16 0x00002b839bbcea8c in QObject::activate_signal ()
   from /usr/lib/qt3/lib64/libqt-mt.so.3
#17 0x00002b839bbcf7a3 in QObject::activate_signal ()
   from /usr/lib/qt3/lib64/libqt-mt.so.3
#18 0x00002b839b3c2b05 in KAccelPrivate::emitActivatedSignal ()
   from /opt/kde3/lib64/libkdecore.so.4
#19 0x00002b839b435d8f in KAccelPrivate::eventFilter ()
   from /opt/kde3/lib64/libkdecore.so.4
#20 0x00002b839bbce492 in QObject::activate_filters ()
   from /usr/lib/qt3/lib64/libqt-mt.so.3
#21 0x00002b839bbce4e7 in QObject::event ()
   from /usr/lib/qt3/lib64/libqt-mt.so.3
#22 0x00002b839bc015c8 in QWidget::event ()
   from /usr/lib/qt3/lib64/libqt-mt.so.3
#23 0x00002b839bcad065 in QMainWindow::event ()
   from /usr/lib/qt3/lib64/libqt-mt.so.3
#24 0x00002b8399bb53b6 in KMdiMainFrm::event ()
   from /opt/kde3/lib64/libkmdi.so.1
#25 0x00002b839bb77a95 in QApplication::internalNotify ()
   from /usr/lib/qt3/lib64/libqt-mt.so.3
#26 0x00002b839bb78d69 in QApplication::notify ()
   from /usr/lib/qt3/lib64/libqt-mt.so.3
#27 0x00002b839b437b38 in KApplication::notify ()
   from /opt/kde3/lib64/libkdecore.so.4
#28 0x00002b839b3cdf59 in KAccelEventHandler::x11Event ()
   from /opt/kde3/lib64/libkdecore.so.4
#29 0x00002b839b42b9b8 in KApplication::x11EventFilter ()
   from /opt/kde3/lib64/libkdecore.so.4
#30 0x00002b839bb10297 in qt_x11EventFilter ()
   from /usr/lib/qt3/lib64/libqt-mt.so.3
#31 0x00002b839bb1ea49 in QApplication::x11ProcessEvent ()
   from /usr/lib/qt3/lib64/libqt-mt.so.3
#32 0x00002b839bb2e25f in QEventLoop::processEvents ()
   from /usr/lib/qt3/lib64/libqt-mt.so.3
#33 0x00002b839bb8c7a1 in QEventLoop::enterLoop ()
   from /usr/lib/qt3/lib64/libqt-mt.so.3
#34 0x00002b839bb8c64a in QEventLoop::exec ()
   from /usr/lib/qt3/lib64/libqt-mt.so.3
#35 0x00000000004be428 in main ()
Comment 1 András Manţia 2006-07-06 12:08:25 UTC
Can you post a little example file to reproduce it?
Comment 2 András Manţia 2006-09-02 11:32:35 UTC
SVN commit 579975 by amantia:

Fix crash when copying to clipboard inside VPL.

BUG: 130212

 M  +1 -0      ChangeLog  
 M  +84 -83    parts/kafka/kafkacommon.cpp