Fix crash when copying to clipboard inside VPL.

BUG: 130212